Fixed issue where logo in menu was same colour as the BG (almost) and so hard to see.

--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -70,6 +70,11 @@
 	}
 	#menu ul li.current, #menu ul li.active {
 		border-top:3px solid #BD4932;
+
+		.menuhomelink {
+			@include blueGrad();
+			border-radius:0 0 30px 0;
+		}
 	}
 	
 	#menu ul li.current a {
